# Termidash

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.ps1  build.sh
.github/workflows/: ci.yml
include/common/: Logger.hpp  PlatformInit.hpp  PlatformUtils.hpp  SecurityUtils.hpp
include/core/: AliasManager.hpp  BraceExpander.hpp  BuiltInCommandHandler.hpp  CommandExecutor.hpp  CommandExecutorFactory.hpp  CommandSubstitution.hpp  CompletionEngine.hpp  ControlFlowHandler.hpp  Environment.hpp  ExecContext.hpp  ExpressionEvaluator.hpp  FunctionManager.hpp  GlobExpander.hpp  ISignalHandler.hpp  InputHandler.hpp  JobManager.hpp  JobManagerFactory.hpp  MemStream.hpp  Parser.hpp  PipelineExecutor.hpp  PlatformFactory.hpp  PromptEngine.hpp  RingBuffer.hpp  ShellLoop.hpp  SignalHandlerFactory.hpp  VariableManager.hpp
include/core/BuiltIn/: CommonCommandHandler.hpp  LinuxCommandHandler.hpp  WindowsCommandHandler.hpp
include/platform/interfaces/: IProcessManager.hpp  ITerminal.hpp  ProcessError.hpp
include/platform/linux/: LinuxJobManager.hpp  LinuxProcessManager.hpp  LinuxSignalHandler.hpp  LinuxTerminal.hpp
include/platform/windows/: WindowsCommandExecutor.hpp  WindowsJobManager.hpp  WindowsProcessManager.hpp  WindowsSignalHandler.hpp  WindowsTerminal.hpp
src/: main.cpp
src/common/: Logger.cpp  PlatformInit.cpp  PlatformUtils.cpp  SecurityUtils.cpp
src/core/: AliasManager.cpp  BraceExpander.cpp  BuiltInCommandHandler.cpp  CommandExecutorFactory.cpp  CommandSubstitution.cpp  CompletionEngine.cpp  ControlFlowHandler.cpp  Environment.cpp  ExpressionEvaluator.cpp  FunctionManager.cpp  GlobExpander.cpp  InputHandler.cpp  JobManagerFactory.cpp  Parser.cpp  PipelineExecutor.cpp  PlatformFactory.cpp  PromptEngine.cpp  ShellLoop.cpp  SignalHandlerFactory.cpp  VariableManager.cpp
src/core/BuiltIn/: CommonCommandHandler.cpp  LinuxCommandHandler.cpp  WindowsCommandHandler.cpp
src/platform/linux/: LinuxJobManager.cpp  LinuxProcessManager.cpp  LinuxSignalHandler.cpp  LinuxTerminal.cpp
src/platform/windows/: WindowsCommandExecutor.cpp  WindowsJobManager.cpp  WindowsProcessManager.cpp  WindowsSignalHandler.cpp  WindowsTerminal.cpp
tests/: test_main.cpp
tests/common/: test_security_utils.cpp
tests/core/: test_alias_manager.cpp  test_brace_expander.cpp  test_command_substitution.cpp  test_completion_engine.cpp  test_control_flow_handler.cpp  test_expression_evaluator.cpp  test_function_manager.cpp  test_glob_expander.cpp  test_parser.cpp  test_process_error.cpp  test_prompt_engine.cpp  test_variable_manager.cpp
